Fix immutable list reverse (#73)